--- a/home.html
+++ b/home.html
@@ -1,13 +1,42 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="pl">
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
     <title>todo</title>
-    <meta name="todo" content="todo"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <meta name="todo" content="todo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-Hello World! sdf
+    <div id="container">
+        <div id="header">TODO</div>
+        <div id="picture"><img src="kameleon.png"></div>
+        <div id="main">Cześć!<br />Fajnie, że do nas zajrzałeś :) Jesteśmy grupą osób, które mają rodziny, pracę,
+            mnóstwo problemów i co oczywiste nie mają czasu, ale przede wszystkim nie mają też nic do stracenia! I
+            dlatego, na przekór wszystkim przeciwnościom losu, desperacko chcemy posiąść tajemną wiedzę dotyczącą
+            szeroko rozumianego programowania. Jeśli chciałbyś dołączyć do naszego zespołu to serdecznie zapraszamy do
+            kontaktu z nami! A jeśli znajdziesz jeszcze chwilkę to zobacz jakie projekty udało nam się do tej pory
+            zrealizować.<br />Pozdrawiamy! :)</div>
+        <a href="onas.html" target="_blank" class="tilelink">
+            <div id="tile1"><i class="icon-user"></i><br />O nas</div>
+        </a>
+        <a href="projekty.html" target="_blank" class="tilelink">
+            <div id="tile2"><i class="icon-laptop"></i><br />Projekty grupy</div>
+        </a>
+        <a href="kontakt.html" target="_blank" class="tilelink">
+            <div id="tile3"><i class="icon-mail"></i><br />Kontakt</div>
+        </a>
+        <div style="clear:both"></div>
+    </div>
 </body>
+
 </html>
