--- a/home.html
+++ b/home.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
-<html lang="pl">
 
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>todo</title>
+    <title>DOIT</title>
 
-    <meta name="todo" content="todo" />
+    <meta name="description" content="How to make yourself an internet technology specialist" />
+    <meta name="keywords" content="IT, internet technology, html, css, frontend developer, how to start programming" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="css/fontello.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,22 +19,27 @@
 
 <body>
     <div id="container">
-        <div id="header">TODO</div>
-        <div id="picture"><img src="kameleon.png"></div>
-        <div id="main">Cześć!<br />Fajnie, że do nas zajrzałeś :) Jesteśmy grupą osób, które mają rodziny, pracę,
-            mnóstwo problemów i co oczywiste nie mają czasu, ale przede wszystkim nie mają też nic do stracenia! I
-            dlatego, na przekór wszystkim przeciwnościom losu, desperacko chcemy posiąść tajemną wiedzę dotyczącą
-            szeroko rozumianego programowania. Jeśli chciałbyś dołączyć do naszego zespołu to serdecznie zapraszamy do
-            kontaktu z nami! A jeśli znajdziesz jeszcze chwilkę to zobacz jakie projekty udało nam się do tej pory
-            zrealizować.<br />Pozdrawiamy! :)</div>
-        <a href="onas.html" target="_blank" class="tilelink">
-            <div id="tile1"><i class="icon-user"></i><br />O nas</div>
+        <div class="header">
+            <div id="logo1">DO</div>
+            <div id="logo2">IT</div>
+            <div id="logo3">Make yourself an<span style="color: #ee5232"> Internet Technology </span>specialist!</div>
+        </div>
+        <div style="clear:both"></div>
+        <div id="picture"><img src="chameleon.png" alt="chameleon"></div>
+        <div id="main">Hi!<br />It's nice that you visited us :) We are a group of people who have families, work, lots
+            of problems, and don't have time obviously, but most of all we have nothing to lose! And that is why, in
+            spite of all adversities, we desperately want to acquire the secret knowledge of programming. So maybe we
+            are a little bit like chameleons - because we try to completely change ;) If you would like to join our
+            team, please feel free to contact us! And if you find some time more, see what projects we have managed to
+            implement so far.<br />See You! :)</div>
+        <a href="aboutUs.html" target="_blank" class="tilelink">
+            <div id="about-us"><i class="icon-user"></i><br />About us</div>
         </a>
-        <a href="projekty.html" target="_blank" class="tilelink">
-            <div id="tile2"><i class="icon-laptop"></i><br />Projekty grupy</div>
+        <a href="projects.html" target="_blank" class="tilelink">
+            <div id="projects"><i class="icon-laptop"></i><br />Our projects</div>
         </a>
-        <a href="kontakt.html" target="_blank" class="tilelink">
-            <div id="tile3"><i class="icon-mail"></i><br />Kontakt</div>
+        <a href="contact.html" target="_blank" class="tilelink">
+            <div id="contact"><i class="icon-mail"></i><br />Contact</div>
         </a>
         <div style="clear:both"></div>
     </div>
