second style adjustment

--- a/home.html
+++ b/home.html
@@ -1,13 +1,50 @@
 <!DOCTYPE HTML>
+
 <html>
+
 <head>
-    <meta charset="utf-8"/>
-    <title>todo</title>
-    <meta name="todo" content="todo"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>DOIT</title>
+    <meta name="description" content="How to make yourself an internet technology specialist" />
+    <meta name="keywords" content="IT, internet technology, html, css, frontend developer, how to start programming" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-dHello World! sdf
+    <div id="container">
+        <div class="header">
+            <div id="logo1">DO</div>
+            <div id="logo2">IT</div>
+            <div id="logo3">Make yourself an<span style="color: #ee5232"> Internet Technology </span>specialist!</div>
+        </div>
+        <div style="clear:both"></div>
+        <div id="picture">
+            <img src="chameleon.png" alt="chameleon">
+        </div>
+        <div id="main">Hi!<br />It's nice that you visited us :) We are a group of people who have families, work, lots
+            of problems, and don't have time obviously, but most of all we have nothing to lose! And that is why, in
+            spite of all adversities, we desperately want to acquire the secret knowledge of programming. So maybe we
+            are a little bit like chameleons - because we try to completely change ;) If you would like to join our
+            team, please feel free to contact us! And if you find some time more, see what projects we have managed to
+            implement so far.<br />See You! :)
+        </div>
+        <a href="aboutUs.html" target="_blank" class="tilelink">
+            <div id="about-us"><i class="icon-user"></i><br />About us</div>
+        </a>
+        <a href="projects.html" target="_blank" class="tilelink">
+            <div id="projects"><i class="icon-laptop"></i><br />Our projects</div>
+        </a>
+        <a href="contact.html" target="_blank" class="tilelink">
+            <div id="contact"><i class="icon-mail"></i><br />Contact</div>
+        </a>
+        <div style="clear:both"></div>
+    </div>
 </body>
+
 </html>
